--- a/app/public/index.html
+++ b/app/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <h1 class="leader-h">Tweeter</h1>
+  <h1 class="leader-h">TweeterXX</h1>
 
   <div class="tweet-container">
     <input placeholder="Say something . . ." type="text" class="new-tweet-input" id="new-tweet">
